--- a/gallery.html
+++ b/gallery.html
@@ -140,7 +140,7 @@
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n42.JPEG" alt="Jump In - New | Acrylic, 24&quot x 3.5&quot | $110" SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n46.JPG" alt="Pear - New | Acrylic, 20&quot x 20&quot | $80" /></span></div>
 										<div class="col-4"><p><b><i>Windy Day - New</i></b><br />Acrylic, 20" x 10"<br />$40</p></div>
-										<div class="col-4"><p><b><i>Jump In - New</i></b><br />Acrylic, 24" x 3.5"<br />$110</p></div>
+										<div class="col-4"><p><b><i>Jump In - New</i></b><br />Acrylic, 24" x 3.5"<br />$110 SOLD</p></div>
 										<div class="col-4"><p><b><i>Pear - New</i></b><br />Acrylic, 20" x 20"<br />$80</p></div>
 
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n22.jpeg" alt="Prairie Field | Acrylic, 10&quot  x 20&quot | $30 SOLD" /></span></div>
