--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,7 @@
 								<h2><a id="abstract collection">Abstract Collection</a></h2>
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a24.JPEG" alt="Sea Life - New | Acrylic, 24&quot x 32&quot | $140" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a24.JPEG" alt="Sea Life - New | Acrylic, 24&quot x 32&quot | $140 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a25.JPEG" alt="Shadows - New | Acrylic, 12&quot x 12&quot | $40" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a23.JPEG" alt="Morning Dew - New | Acrylic, 12&quot x 24&quot | $90" /></span></div>
 										<div class="col-4"><p><b><i>Sea Life - New</i></b><br />Acrylic, 24" x 32"<br />$140</p></div>
