--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a24.JPEG" alt="Sea Life - New | Acrylic, 24&quot x 32&quot | $140 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a25.JPEG" alt="Shadows - New | Acrylic, 12&quot x 12&quot | $40" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a23.JPEG" alt="Morning Dew - New | Acrylic, 12&quot x 24&quot | $90" /></span></div>
-										<div class="col-4"><p><b><i>Sea Life - New</i></b><br />Acrylic, 24" x 32"<br />$140</p></div>
+										<div class="col-4"><p><b><i>Sea Life - New</i></b><br />Acrylic, 24" x 32"<br />$140 SOLD</p></div>
 										<div class="col-4"><p><b><i>Shadows - New</i></b><br />Acrylic, 12" x 12"<br />$40</p></div>
 										<div class="col-4"><p><b><i>Morning Dew - New</i></b><br />Acrylic, 12" x 24"<br />$90</p></div>
 
