--- a/gallery.html
+++ b/gallery.html
@@ -120,6 +120,11 @@
 								<h2><a id="nature collection">Nature Collection</a></h2>
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
+										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n49.jpeg" alt="Windy Day - New | Acrylic, 20&quot x 10&quot | $40" /></span></div>
+										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n52.jpg" alt="Ocean Blue - New | Acrylic, 36&quot x 12&quot | $120" /></span></div>
+										<div class="col-5"><p><b><i>Windy Day - New</i></b><br />Acrylic, 20" x 10"<br />$40</p></div>
+										<div class="col-5"><p><b><i>Ocean Blue - New</i></b><br />Acrylic, 36" x 12"<br />$120</p></div>
+
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n45.JPEG" alt="Dappled Light - New | Acrylic, 12&quot x 16&quot | $70" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n47.JPG" alt="Getaway - New | Acrylic, 24&quot x 18&quot | $140" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n48.JPEG" alt="Grassy Spot - New | Acrylic, 18&quot x 24&quot | $80" /></span></div>
@@ -136,12 +141,26 @@
 										<div class="col-3"><p><b><i>Vibrant Nature - New</i></b><br />Acrylic, 12" x 36"<br />$140</p></div>
 										<div class="col-3"><p><b><i>Vivid Colours - New</i></b><br />Acrylic, 24" x 18"<br />$110</p></div>
 
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n49.jpeg" alt="Windy Day - New | Acrylic, 20&quot x 10&quot | $40" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n42.JPEG" alt="Jump In - New | Acrylic, 24&quot x 3.5&quot | $110" SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n46.JPG" alt="Pear - New | Acrylic, 20&quot x 20&quot | $80" /></span></div>
-										<div class="col-4"><p><b><i>Windy Day - New</i></b><br />Acrylic, 20" x 10"<br />$40</p></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n53.jpg" alt="Sunny Morning - New | Acrylic, 18&quot x 24&quot | $140" /></span></div>
 										<div class="col-4"><p><b><i>Jump In - New</i></b><br />Acrylic, 24" x 3.5"<br />$110 SOLD</p></div>
 										<div class="col-4"><p><b><i>Pear - New</i></b><br />Acrylic, 20" x 20"<br />$80</p></div>
+										<div class="col-4"><p><b><i>Sunny Morning - New</i></b><br />Acrylic, 18" x 24"<br />$140</p></div>
+
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n51.jpg" alt="Tidal Breeze - New | Acrylic, 24&quot x 36&quot | $200" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n50.jpg" alt="Carefree - New | Acrylic, 30&quot x 24&quot | $150" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n35.jpg" alt="Frostbite | Acrylic, 20&quot x 16&quot | $50" /></span></div>
+										<div class="col-4"><p><b><i>Tidal Breeze - New</i></b><br />Acrylic, 24" x 36"<br />$200</p></div>
+										<div class="col-4"><p><b><i>Carefree - New</i></b><br />Acrylic, 30" x 24"<br />$150</p></div>
+										<div class="col-4"><p><b><i>Frostbite</i></b><br />Acrylic, 20" x 16"<br />$50</p></div>
+
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n18.jpeg" alt="Uphill | Acrylic, 15.5&quot x 12&quot | $60" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n24.jpeg" alt="Overgrowth | Acrylic and Ink, 18&quot x 24&quot | $80" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n36.jpg" alt="Dusk | Acrylic, 24&quot x 18&quot | $60 SOLD" /></span></div>
+										<div class="col-4"><p><b><i>Uphill</i></b><br />Acrylic, 15.5" x 12"<br />$60</p></div>
+										<div class="col-4"><p><b><i>Overgrowth</i></b><br />Acrylic and Ink, 18" x 24"<br />$80</p></div>
+										<div class="col-4"><p><b><i>Dusk</i></b><br />Acrylic, 24" x 18"<br />$60 SOLD</p></div>
 
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n22.jpeg" alt="Prairie Field | Acrylic, 10&quot  x 20&quot | $30 SOLD" /></span></div>
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n32.JPG" alt="Summer Sky | Acrylic, 10&quot x 20&quot | $40 SOLD" /></span></div>
@@ -212,16 +231,6 @@
 										<div class="col-3"><p><b><i>Open Sky</i></b><br />Acrylic, 10" x 20"<br />$40 SOLD</p></div>
 										<div class="col-3"><p><b><i>Lush</i></b><br />Pastels, 6' x 8"<br />$20</p></div>
 										<div class="col-3"><p><b><i>Calm</i></b><br />Acrylic, 8" x 10"<br />$30 SOLD</p></div>
-
-										
-										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n18.jpeg" alt="Uphill | Acrylic, 15.5&quot x 12&quot | $60" /></span></div>
-										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n24.jpeg" alt="Overgrowth | Acrylic and Ink, 18&quot x 24&quot | $80" /></span></div>
-										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n35.jpg" alt="Frostbite | Acrylic, 20&quot x 16&quot | $50" /></span></div>
-										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n36.jpg" alt="Dusk | Acrylic, 24&quot x 18&quot | $60 SOLD" /></span></div>
-										<div class="col-3"><p><b><i>Uphill</i></b><br />Acrylic, 15.5" x 12"<br />$60</p></div>
-										<div class="col-3"><p><b><i>Overgrowth</i></b><br />Acrylic and Ink, 18" x 24"<br />$80</p></div>
-										<div class="col-3"><p><b><i>Frostbite</i></b><br />Acrylic, 20" x 16"<br />$50</p></div>
-										<div class="col-3"><p><b><i>Dusk</i></b><br />Acrylic, 24" x 18"<br />$60 SOLD</p></div>
 
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n34.png" alt="Summer | Acrylic, 20&quot x 20&quot | $80 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n7.jpg" alt="Look Up, Way Up | Acrylic, 12&quot x 12&quot | $50 SOLD" /></span></div>
