Fixed Jump In Price

--- a/gallery.html
+++ b/gallery.html
@@ -141,10 +141,10 @@
 										<div class="col-3"><p><b><i>Vibrant Nature - New</i></b><br />Acrylic, 12" x 36"<br />$140</p></div>
 										<div class="col-3"><p><b><i>Vivid Colours - New</i></b><br />Acrylic, 24" x 18"<br />$110</p></div>
 
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n42.JPEG" alt="Jump In - New | Acrylic, 24&quot x 3.5&quot | $110" SOLD" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n42.JPEG" alt="Jump In - New | Acrylic, 24&quot x 3.5&quot | $175 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n46.JPG" alt="Pear - New | Acrylic, 20&quot x 20&quot | $80" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n53.jpg" alt="Sunny Morning - New | Acrylic, 18&quot x 24&quot | $140" /></span></div>
-										<div class="col-4"><p><b><i>Jump In - New</i></b><br />Acrylic, 24" x 3.5"<br />$110 SOLD</p></div>
+										<div class="col-4"><p><b><i>Jump In - New</i></b><br />Acrylic, 24" x 3.5"<br />$175 SOLD</p></div>
 										<div class="col-4"><p><b><i>Pear - New</i></b><br />Acrylic, 20" x 20"<br />$80</p></div>
 										<div class="col-4"><p><b><i>Sunny Morning - New</i></b><br />Acrylic, 18" x 24"<br />$140</p></div>
 
