--- a/gallery.html
+++ b/gallery.html
@@ -125,7 +125,7 @@
 										<div class="col-5"><p><b><i>Windy Day - New</i></b><br />Acrylic, 20" x 10"<br />$40</p></div>
 										<div class="col-5"><p><b><i>Ocean Blue - New</i></b><br />Acrylic, 36" x 12"<br />$120</p></div>
 
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n45.JPEG" alt="Dappled Light - New | Acrylic, 12&quot x 16&quot | $70" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n45.JPEG" alt="Dappled Light - New | Acrylic, 12&quot x 16&quot | $70" SOLD /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n47.JPG" alt="Getaway - New | Acrylic, 24&quot x 18&quot | $140" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n48.JPEG" alt="Grassy Spot - New | Acrylic, 18&quot x 24&quot | $80" /></span></div>
 										<div class="col-4"><p><b><i>Dappled Light - New</i></b><br />Acrylic, 12" x 16"<br />$70</p></div>
