--- a/gallery.html
+++ b/gallery.html
@@ -132,7 +132,7 @@
 										<div class="col-4"><p><b><i>Getaway - New</i></b><br />Acrylic, 24" x 18"<br />$140</p></div>
 										<div class="col-4"><p><b><i>Grassy Spot - New</i></b><br />Acrylic, 18" x 24"<br />$80</p></div>
 
-										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n40.JPEG" alt="Summer Is Here - New | Acrylic, 20&quot x 10&quot | $50" /></span></div>
+										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n40.JPEG" alt="Summer Is Here - New | Acrylic, 20&quot x 10&quot | $50" SOLD/></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n43.JPEG" alt="Hope - New | Acrylic, 12&quot x 36&quot | $120 SOLD" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n44.JPEG" alt="Vibrant Nature - New | Acrylic, 12&quot x 36&quot | $140" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n41.JPEG" alt="Vivid Colours - New | Acrylic, 24&quot x 18&quot | $110" /></span></div>
