--- a/gallery.html
+++ b/gallery.html
@@ -128,7 +128,7 @@
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n45.JPEG" alt="Dappled Light - New | Acrylic, 12&quot x 16&quot | $70" SOLD /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n47.JPG" alt="Getaway - New | Acrylic, 24&quot x 18&quot | $140" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n48.JPEG" alt="Grassy Spot - New | Acrylic, 18&quot x 24&quot | $80" /></span></div>
-										<div class="col-4"><p><b><i>Dappled Light - New</i></b><br />Acrylic, 12" x 16"<br />$70</p></div>
+										<div class="col-4"><p><b><i>Dappled Light - New</i></b><br />Acrylic, 12" x 16"<br />$70SOLD</p></div>
 										<div class="col-4"><p><b><i>Getaway - New</i></b><br />Acrylic, 24" x 18"<br />$140</p></div>
 										<div class="col-4"><p><b><i>Grassy Spot - New</i></b><br />Acrylic, 18" x 24"<br />$80</p></div>
 
