--- a/gallery.html
+++ b/gallery.html
@@ -136,7 +136,7 @@
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n43.JPEG" alt="Hope - New | Acrylic, 12&quot x 36&quot | $120 SOLD" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n44.JPEG" alt="Vibrant Nature - New | Acrylic, 12&quot x 36&quot | $140" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n41.JPEG" alt="Vivid Colours - New | Acrylic, 24&quot x 18&quot | $110" /></span></div>
-										<div class="col-3"><p><b><i>Summer Is Here - New</i></b><br />Acrylic, 20" x 10"<br />$50</p></div>
+										<div class="col-3"><p><b><i>Summer Is Here - New</i></b><br />Acrylic, 20" x 10"<br />$50SOLD</p></div>
 										<div class="col-3"><p><b><i>Hope - New</i></b><br />Acrylic, 12" x 36"<br />$120 SOLD</p></div>
 										<div class="col-3"><p><b><i>Vibrant Nature - New</i></b><br />Acrylic, 12" x 36"<br />$140</p></div>
 										<div class="col-3"><p><b><i>Vivid Colours - New</i></b><br />Acrylic, 24" x 18"<br />$110</p></div>
