--- a/gallery.html
+++ b/gallery.html
@@ -156,10 +156,10 @@
 										<div class="col-4"><p><b><i>Frostbite</i></b><br />Acrylic, 20" x 16"<br />$50</p></div>
 
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n18.jpeg" alt="Uphill | Acrylic, 15.5&quot x 12&quot | $60" /></span></div>
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n24.jpeg" alt="Overgrowth | Acrylic and Ink, 18&quot x 24&quot | $80" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n24.jpeg" alt="Overgrowth | Acrylic and Ink, 18&quot x 24&quot | $80" SOLD /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n36.jpg" alt="Dusk | Acrylic, 24&quot x 18&quot | $60 SOLD" /></span></div>
 										<div class="col-4"><p><b><i>Uphill</i></b><br />Acrylic, 15.5" x 12"<br />$60</p></div>
-										<div class="col-4"><p><b><i>Overgrowth</i></b><br />Acrylic and Ink, 18" x 24"<br />$80</p></div>
+										<div class="col-4"><p><b><i>Overgrowth</i></b><br />Acrylic and Ink, 18" x 24"<br />$80 SOLD</p></div>
 										<div class="col-4"><p><b><i>Dusk</i></b><br />Acrylic, 24" x 18"<br />$60 SOLD</p></div>
 
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n22.jpeg" alt="Prairie Field | Acrylic, 10&quot  x 20&quot | $30 SOLD" /></span></div>
