--- a/gallery.html
+++ b/gallery.html
@@ -121,9 +121,9 @@
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n49.jpeg" alt="Windy Day - New | Acrylic, 20&quot x 10&quot | $40" /></span></div>
-										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n52.jpg" alt="Ocean Blue - New | Acrylic, 36&quot x 12&quot | $120" /></span></div>
+										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n52.jpg" alt="Ocean Blue - New | Acrylic, 36&quot x 12&quot | $120" SOLD /></span></div>
 										<div class="col-5"><p><b><i>Windy Day - New</i></b><br />Acrylic, 20" x 10"<br />$40</p></div>
-										<div class="col-5"><p><b><i>Ocean Blue - New</i></b><br />Acrylic, 36" x 12"<br />$120</p></div>
+										<div class="col-5"><p><b><i>Ocean Blue - New</i></b><br />Acrylic, 36" x 12"<br />$120< SOLD/p></div>
 
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n45.JPEG" alt="Dappled Light - New | Acrylic, 12&quot x 16&quot | $70" SOLD /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n47.JPG" alt="Getaway - New | Acrylic, 24&quot x 18&quot | $140" /></span></div>
