--- a/gallery.html
+++ b/gallery.html
@@ -207,10 +207,10 @@
 										<div class="col-5"><p><b><i>On It's Way</i></b><br />Acrylic, 16" x 10"<br />$45 SOLD</p></div>
 										<div class="col-5"><p><b><i>Golden</i></b><br />Acrylic, 10' x 20"<br />$40 SOLD</p></div>
 
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n15.jpeg" alt="Winter Wonder | Acrylic Layers, 20&quot x 20&quot | $90" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n15.jpeg" alt="Winter Wonder | Acrylic Layers, 20&quot x 20&quot | $90 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n12.jpeg" alt="Fall Shadows | Acrylic, 16&quot x 12&quot | $50 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n5.jpg" alt="Upstream | Acrylic, 10&quot x 10&quot | $20 SOLD" /></span></div>
-										<div class="col-4"><p><b><i>Winter Wonder</i></b><br />Acrylic Layers, 20" x 20"<br />$90</p></div>
+										<div class="col-4"><p><b><i>Winter Wonder</i></b><br />Acrylic Layers, 20" x 20"<br />$90SOLD</p></div>
 										<div class="col-4"><p><b><i>Fall Shadows</i></b><br />Acrylic, 16" x 12"<br />$50 SOLD</p></div>
 										<div class="col-4"><p><b><i>Upstream</i></b><br />Acrylic, 10" x 10"<br />$20 SOLD</p></div>
 
